--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,18 @@ name = "epypen"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.0"
+requires-python = ">=3.8"
 dependencies = [
-    "pydantic=*",
+    "pydantic",
     "typing-extensions>=4.12.2",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.4",
+    "pytest-asyncio>=0.24.0",
+    "pytest-xdist>=3.6.1",
+]
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
