--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ skip_missing_interpreters = True
 [testenv]
 deps =
     pytest
+    pytest-asyncio
     pytest-xdist
     pydantic1: pydantic>=1,<2
     pydantic2: pydantic>=2
