--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,22 +20,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
           # Install a specific version of uv.
           version: "0.6.3"
 
-      - name: Setup tests environment
-        run: uv install --dev pydantic==${{ matrix.pydantic-version }}
-
       - name: Run tests
-        run: pytest -n auto
+        run: uv run --with pydantic==${{ matrix.pydantic-version }} --python==${{ matrix.python-version }} -- pytest -n auto
 
   # Linting and static analysis
   lint:
