--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dev = [
 ]
 
 [tool.uv]
-kind = "library"
+managed = false
 
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
