--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,7 +32,7 @@ jobs:
           version: "0.6.3"
 
       - name: Run tests
-        run: uv run --with pydantic==${{ matrix.pydantic-version }} --python==${{ matrix.python-version }} -- pytest -n auto
+        run: uv run --with pydantic==${{ matrix.pydantic-version }} -- pytest -n auto
 
   # Linting and static analysis
   lint:
