--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,8 +15,8 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        python-version: [3.8, 3.9, '3.10', 3.11, 3.12]
-        pydantic-version: [1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, '1.9.0', '2.0', '2.1.0', '2.2.0', '2.6.0', '2.8.0', '2.9.0', '2.10.0']
+        python-version: [3.8 , 3.9, '3.10', 3.11, 3.12]
+        pydantic-version: [1.2,  1.5, '1.9.0', '2.0', '2.2.0', '2.6.0', '2.10.0']
     steps:
       - uses: actions/checkout@v3
 
