--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.8 , 3.9, '3.10', 3.11, 3.12]
-        pydantic-version: [1.2,  1.5, '1.9.0', '2.0', '2.2.0', '2.6.0', '2.10.0']
+        pydantic-version: [1.2,  1.5, '1.9.0', '2.2.0', '2.6.0', '2.10.0']
     steps:
       - uses: actions/checkout@v3
 
@@ -24,12 +24,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Set up Rust
-        uses: actions-rust-lang/setup-rust-toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
