--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "epypen"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.1.0-beta"
+description = "Lightweight translation decorator between Python objects"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
