made it publish ready

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -65,6 +65,9 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     needs: [test, lint]
+    permissions:
+      id-token: write
+
     steps:
       - uses: actions/checkout@v3
 
