--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "pydantic",
     "typing-extensions>=4.12.2",
 ]
-
+license = "GPL-3.0"
 
 [dependency-groups]
 dev = [
@@ -21,5 +21,5 @@ dev = [
 asyncio_default_fixture_loop_scope = "function"
 
 [build-system]
-requires = ["setuptools >= 75.8.2"]
+requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
