--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "pydantic",
     "typing-extensions>=4.12.2",
 ]
-license = "GPL-3.0"
+license = {text= "GPL-3.0"}
 
 [dependency-groups]
 dev = [
