--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,8 +15,9 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        python-version: [3.8 , 3.9, '3.10', 3.11, 3.12]
-        pydantic-version: [1.2,  1.5, '1.9.0', '2.2.0', '2.6.0', '2.10.0']
+        python-version: [3.6, 3.7, 3.8 , 3.9, '3.10', 3.11, 3.12]
+        pydantic-version: [1.2, 1.5, '1.9.0', '2.2.0', '2.6.0', '2.10.0']
+        typing-extensions-version: ['4.0.0', '4.6.0', '4.12.2']
     steps:
       - uses: actions/checkout@v3
 
@@ -32,7 +33,7 @@ jobs:
           version: "0.6.3"
 
       - name: Run tests
-        run: uv run --with pydantic==${{ matrix.pydantic-version }} -- pytest -n auto
+        run: uv run --with typing-extensions==${{matrix.typing-extensions-version}} --with pydantic==${{ matrix.pydantic-version }} -- pytest -n auto
 
   # Linting and static analysis
   lint:
@@ -42,10 +43,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python 3.11
+      - name: Set up Python 3.13
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: 3.13
 
       - name: Install linting tools
         run: pip install ruff black mypy bandit
@@ -71,10 +72,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python 3.11
+      - name: Set up Python 3.13
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: 3.13
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
