--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "epypen is a lightweight translation decorator that bridges the ga
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
-    "pydantic",
+    "pydantic<3.0.0",
     "typing-extensions>=4.0.0",
 ]
 license = {text= "GPL-3.0"}
