--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = "epypen"
-version = "0.1.2"
+version = "1.0.0"
 description = "epypen is a lightweight translation decorator that bridges the gap between raw Python objects and type-annotated data."
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
-    "pydantic",
+    "pydantic<3.0.0",
     "typing-extensions>=4.0.0",
 ]
 license = {text= "GPL-3.0"}
