--- a/.gitignore
+++ b/.gitignore
@@ -281,5 +281,5 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains+all,visualstudiocode,python
-.python-version
+.python-version+
 uv.lock
